fix mobile spacing

--- a/src/styles/NavBar.scss
+++ b/src/styles/NavBar.scss
@@ -54,6 +54,8 @@
     width: 100vw;
     z-index: 1;
     height:75px;
+    padding-left: 10px;
+    padding-right: 10px;
   }
   .nav-spacer {
     display: block;
